<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.1.4</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.lirezap</groupId>
    <artifactId>pq</artifactId>
    <version>0.0.46</version>
    <name>pq</name>
    <description>Native postgresql access using FFM</description>

    <properties>
        <!-- Java Version-->
        <java.version>22</java.version>

        <!-- Plugins Versioning-->
        <maven.compiler.plugin.version>3.11.0</maven.compiler.plugin.version>
        <maven.javadoc.plugin.version>3.6.0</maven.javadoc.plugin.version>
    </properties>
</project>
